# cargo-clicker

./: Cargo.toml  README.md  dist-workspace.toml
src/: main.rs
