[package]
description = "who's a good programmer? you are!"
repository = "https://github.com/biteablepet/cargo-clicker"
license = "MIT OR Apache-2.0"
name = "cargo-clicker"
version = "0.1.3"
edition = "2021"

[dependencies]
rand = "0.9.0"
rodio = "0.20.1"

[profile.release]
codegen-units = 1
lto = "fat"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
